[gd_scene load_steps=2 format=3 uid="uid://cq0f4pcg3pm20"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_2vteg"]

[node name="UI" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("1_2vteg")

[node name="WeaponsLabel" type="Label" parent="UI"]
offset_left = 24.0
offset_top = 8.0
offset_right = 96.0
offset_bottom = 34.0
text = "Weapons:
"

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 24.0
offset_top = 56.0
offset_right = 76.0
offset_bottom = 82.0
text = "Score: "

[node name="HealthLabel" type="Label" parent="UI"]
offset_left = 24.0
offset_top = 32.0
offset_right = 84.0
offset_bottom = 58.0
text = "Health: "
